--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </section>
       </section>
       <section id="projects">
-        <section class="main-projects">
+        <section>
           <div class="background-non-square"><h2>Proyectos</h2></div>
           <h3 class="subtitle-projects">Nunca hay que estar quieto</h3>
           <section class="main-projects">
